<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="60dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/silakan_masukkan_periode"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/untuk_melakukan_filter_pada_ringkasan_laporan_yang_akan_ditampilkan"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/tanggal_awal"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvStartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_border_grey"
            android:drawableEnd="@drawable/ic_keyboard_arrow_down_black_16dp"
            android:padding="14dp"
            android:text=""
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/tanggal_akhir"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvEndDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_border_grey"
            android:drawableEnd="@drawable/ic_keyboard_arrow_down_black_16dp"
            android:padding="14dp"
            android:text=""
            android:textColor="@color/black" />

    </LinearLayout>

    <Button
        android:id="@+id/btnTampilkan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_fill_blue"
        android:padding="16dp"
        android:text="@string/tampilkan"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />
</FrameLayout>