<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_customer_profile"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_pelanggan" />

        <EditText
            android:id="@+id/etCustomerName"
            style="@style/TextStyle45"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_grey_color"
            android:focusable="false"
            android:enabled="false"
            android:cursorVisible="false"
            android:hint="@string/nama_pelanggan"
            android:inputType="textPersonName"
            android:paddingStart="16dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/no_handphone" />

        <EditText
            android:id="@+id/etCustomerPhone"
            style="@style/TextStyle45"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_grey_color"
            android:ems="10"
            android:focusable="false"
            android:enabled="false"
            android:cursorVisible="false"
            android:hint="@string/no_handphone"
            android:inputType="phone"
            android:paddingStart="16dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/etCustomerEmail"
            style="@style/TextStyle45"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_grey_color"
            android:ems="10"
            android:focusable="false"
            android:enabled="false"
            android:cursorVisible="false"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:padding="20dp">

        <Button
            android:id="@+id/btnCustomerDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_border_grey"
            android:padding="12dp"
            android:text="@string/hapus"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnCustomerUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_fill_blue"
            android:padding="12dp"
            android:text="@string/ubah"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</FrameLayout>