<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/transaparent_black"
    android:fitsSystemWindows="false"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_white_dialog"
        android:orientation="vertical">

        <TextView
            style="@style/AvenirMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/apakah_anda_ingin_mengubah_pelanggan_ini"
            android:textColor="#4a4a4a"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <Button
                android:id="@+id/btnCancel"
                style="@style/AvenirHeavy"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_fill_blue"
                android:letterSpacing="0.04"
                android:text="@string/kembali"
                android:textAppearance="@style/AvenirHeavy"
                android:textColor="#ffffff"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnYes"
                style="@style/AvenirHeavy"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_border_grey"
                android:letterSpacing="0.04"
                android:text="@string/ya_ubah"
                android:textAppearance="@style/AvenirHeavy"
                android:textColor="#4a4a4a"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>