<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/transaparent_black"
    android:fitsSystemWindows="false"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_white_dialog"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="27dp"
        android:paddingRight="20dp"
        android:paddingBottom="28dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_warning_red" />

        <TextView
            style="@style/AvenirHeavy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="6sp"
            android:text="@string/peringatan"
            android:textColor="#4a4a4a"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            style="@style/DinMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="25dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="6sp"
            android:text="@string/anda_hanya_dapat_memilih_kasbon_dengan_nama_pelanggan_yang_sama"
            android:textColor="#4a4a4a"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="6dp"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_fill_blue"
            android:letterSpacing="0.04"
            android:text="@string/oke_saya_mengerti"
            android:textAppearance="@style/AvenirHeavy"
            android:textColor="#ffffff"
            android:textSize="14sp" />

    </LinearLayout>


</LinearLayout>