<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/transaparent_black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:src="@drawable/ic_close_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/pilih_pembayaran"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            style="@style/ProfileSeparator"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/total_kasbon"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="24dp"
            android:drawableStart="@drawable/ic_omzet"
            android:drawablePadding="8dp"
            android:text="Rp170.000"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/metode_pembayaran"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCash"
                    style="@style/DinMedium"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/rounded_fill_white"
                    android:drawableStart="@mipmap/logo_ottoqr"
                    android:drawablePadding="16dp"
                    android:padding="16dp"
                    android:text="@string/uang_tunai"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textColor="@color/greyish_brown"
                    android:textSize="16sp" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnQR"
                    style="@style/DinMedium"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/rounded_fill_white"
                    android:drawableStart="@drawable/ic_scan_qris"
                    android:drawablePadding="16dp"
                    android:padding="16dp"
                    android:text="@string/scan_qr"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textColor="@color/greyish_brown"
                    android:textSize="16sp" />


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>