<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ottokonek.ottokasir.ui.activity.customer.CustomerMainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayoutCustomer"
        style="@style/TabLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:tabIndicator="@drawable/tab_indicator"
        app:tabIndicatorColor="@color/colorPrimaryDark"
        app:tabIndicatorHeight="4dp"
        app:tabMaxWidth="0dp">


        <com.google.android.material.tabs.TabItem
            android:id="@+id/customerProfile"
            style="@style/DinMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profil" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/customerHistory"
            style="@style/DinMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/riwayat" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/customerKasbon"
            style="@style/DinMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kasbon" />


    </com.google.android.material.tabs.TabLayout>

    <View
        android:id="@+id/viewTabLayout"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/warm_grey_three"
        app:layout_constraintTop_toBottomOf="@id/tabLayoutCustomer" />


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewTabLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>